Restarted gn1 on tux01

--- a/web/infoshare/includes/config.html
+++ b/web/infoshare/includes/config.html
@@ -1,5 +1,5 @@
 <?php
-    define('DB_HOST', 'tux.uthsc.edu');
+    define('DB_HOST', 'tux01.genenetwork.org');
     define('DB_USER', 'webqtlout');
     define('DB_PASSWORD', 'webqtlout');
     define('DB_DATABASE', 'db_webqtl');
