Fixing GN1 to run with PHP5

--- a/web/infoshare/includes/config.html
+++ b/web/infoshare/includes/config.html
@@ -1,5 +1,7 @@
 <?php
-    define('DB_HOST', 'tux01.genenetwork.org');
+    include_once('fix_mysql.inc.php');
+
+    define('DB_HOST', 'localhost');
     define('DB_USER', 'webqtlout');
     define('DB_PASSWORD', 'webqtlout');
     define('DB_DATABASE', 'db_webqtl');
