Updates on lily

--- a/web/infoshare/includes/config.html
+++ b/web/infoshare/includes/config.html
@@ -1,5 +1,5 @@
 <?php
-    define('DB_HOST', 'tux.uthsc.edu');
+    define('DB_HOST', '172.23.18.213');
     define('DB_USER', 'webqtlout');
     define('DB_PASSWORD', 'webqtlout');
     define('DB_DATABASE', 'db_webqtl');
